Add google fonts

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link rel="icon" href="icon.png">
   <link rel="stylesheet" href="css/bulma.min.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;600&display=swap" rel="stylesheet"> 
 
   <meta name="theme-color" content="#00d1b2">
 </head>
