Add qotribe to realisations

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Di Gino - Développeur Front-end & Designer UI</title>
+  <title>Di Gino - Développeur Front-end et Designer UI</title>
   <meta name="description" content="Moi c'est Gino. Je suis un simple Développeur Front-end et Designer UI résidant à Lomé">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="Di Gino - Développeur Front-end & Designer UI">
+  <meta property="og:title" content="Di Gino - Développeur Front-end et Designer UI">
   <meta property="og:type" content="website">
   <meta property="og:url" content="digino.github.io">
   <meta property="og:image" content="icon.png">
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="css/bulma.min.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;600&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;600&display=swap" rel="stylesheet"> 
 
   <meta name="theme-color" content="#00d1b2">
 </head>
@@ -40,7 +40,7 @@
 		<section>
 			<div id="a-propos" class="container py-6">
 			<h1 class="title is-2 has-text-centered block">Salut ! Moi c'est <span class="has-text-primary">Gino</span>.</h1>
-			<h2 class="title is-2 has-text-centered">Je suis Développeur web <span class="decoration-primary">Front-end</span><br> & Designer <span class="decoration-second">UI</span></h2>
+			<h2 class="title is-2 has-text-centered">Je suis Développeur web Front-end <br> & Designer UI </h2>
 			</div>
 		
 		</section>
@@ -115,8 +115,8 @@
 						<p class="subtitle"><a href="https://vivreheaven.com" target="_blank">vivreheaven.com</a></p>
 					</div>
 					<div class="tile is-child box">
-						<img class="" src="" alt="Bientôt">
-						<p class="subtitle">Bientôt</p>
+						<img  src="img/qotribe-shot.jpg" alt="Qotribe">
+						<p class="subtitle"><a href="https://qotribe.com" target="_blank">qotribe.com</a></p>
 					</div>
 				</div>
 			</div>
