--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <title>Di Gino - Développeur Front-end et Designer UI</title>
-  <meta name="description" content="Moi c'est Gino. Je suis un simple Développeur Front-end et Designer UI résidant à Lomé">
+  <meta name="description" content="Moi c'est Gino. Je suis un Développeur Front-end et Designer UI résidant à Lomé">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="Di Gino - Développeur Front-end et Designer UI">
