--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		
 		<section class="block">
 			<div id="realisations" class="container py-6">
-			<h2 class="title block">Réalisations</h2>
+			<h2 class="title block">Quelques unes de mes réalisations</h2>
 			<div class="tile is-ancestor">
 				<div class="tile is-6 is-vertical is-parent">
 					<div class="tile is-child box">
@@ -132,7 +132,7 @@
 					<h3 class="title is-4"><span class="decoration-second">Github</span></h3>
 					<p class="content is-medium">github.com/digino</p>
 					<h3 class="title is-4">Adresse</h3>
-					<p class="content is-medium">Adidogomé, Lomé-Togo</p>
+					<p class="content is-medium">05 rue de l'église, Adidogomé-Apédokoè, Lomé-Togo</p>
 				</div>
 			</div>
 		</section>
