Added Keran Shot

--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
 						<img src="img/erudyx-shot.jpg" alt="Erudyx.com">
 						<p class="subtitle"><a href="https://erudyx.com" target="_blank">erudyx.com</a></p>
 					</div>
+					<div class="tile is-child box">
+						<img  src="img/qotribe-shot.jpg" alt="Qotribe">
+						<p class="subtitle"><a href="https://qotribe.com" target="_blank">qotribe.com</a></p>
+					</div>
 				</div>
 				<div class="tile is-vertical is-parent">
 					<div class="tile is-child box">
@@ -115,8 +119,8 @@
 						<p class="subtitle"><a href="https://vivreheaven.com" target="_blank">vivreheaven.com</a></p>
 					</div>
 					<div class="tile is-child box">
-						<img  src="img/qotribe-shot.jpg" alt="Qotribe">
-						<p class="subtitle"><a href="https://qotribe.com" target="_blank">qotribe.com</a></p>
+						<img  src="img/keran-shot.jpg" alt="Esquisse parc national de la Keran">
+						<p class="subtitle">Esquisse Parc National de la Kéran</p>
 					</div>
 				</div>
 			</div>
