--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 				<div class="tile is-vertical is-parent">
 					<div class="tile is-child box">
 						<img src="img/heaven-shot.png" alt="Heaven">
-						<p class="subtitle"><a href="https://vivreheaven.com" target="_blank">vivreheaven.com</a></p>
+						<p class="subtitle"><a href="https://vivreheaven.org" target="_blank">vivreheaven.org</a></p>
 					</div>
 					<div class="tile is-child box">
 						<img  src="img/keran-shot.jpg" alt="Esquisse parc national de la Keran">
