Site mis à jour
Design moderne et clean

--- a/index.html
+++ b/index.html
@@ -1,157 +1,139 @@
 <!doctype html>
 <html class="bg" lang="fr-FR">
 
-  <!-- [...] Practice Practice Practice Make perfect, Nigga it's never too late [...] - Offset -->
+  <!-- [...] Demain c'est loin, notre futur c'est la seconde d'après [...] - Youssoupha -->
 
 <head>
   <meta charset="utf-8">
   <title>Di Gino - Développeur Front-end et Designer UI</title>
-  <meta name="description" content="Moi c'est Gino. Je suis un Développeur Front-end et Designer UI résidant à Lomé">
+  <meta name="description" content="Salut moi c'est Gino. Je suis un Développeur web Front-end et Designer UI résidant à Lomé">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="Di Gino - Développeur Front-end et Designer UI">
+  <meta property="og:title" content="Di Gino - Développeur web Front-end et Designer UI à Lomé">
   <meta property="og:type" content="website">
   <meta property="og:url" content="digino.github.io">
   <meta property="og:image" content="icon.png">
-  
+
   <link rel="icon" href="icon.png">
-  <link rel="stylesheet" href="css/bulma.min.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;600&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 
-  <meta name="theme-color" content="#00d1b2">
+  <meta name="theme-color" content="#A4EAEA">
 </head>
 
 <body>
-	
-	<nav class="navbar" role="navigation" aria-label="main navigation">
-			<div class="navbar-menu is-justify-content-center p-5">
-				<a href="#a-propos" class="navbar-item is-size-5 mx-3">A propos</a>
-				<a href="#realisations" class="navbar-item is-size-5 mx-3">Réalisations</a>
-				<a class="brand mx-3">
-					<img src="img/logo-digino.png" alt="logo-digino">
-				</a>
-				<a href="#competences" class="navbar-item is-size-5 mx-3">Compétences</a>
-				<a href="#contact" class="navbar-item is-size-5 mx-3">Contact</a>
-			</div>
-	</nav>
-	<main class="block">			
-		<section>
-			<div id="a-propos" class="container py-6">
-			<h1 class="title is-2 has-text-centered block">Salut ! Moi c'est <span class="has-text-primary">Gino</span>.</h1>
-			<h2 class="title is-2 has-text-centered">Je suis Développeur web Front-end <br> & Designer UI </h2>
-			</div>
-		
-		</section>
-		
-		<section class="hero is-medium is-primary is-bold skew-block my-6">
-			<div class="hero-head has-text-right skew-text">
-				<div class="container">
-					<p class="block pt-6 is-size-4 has-text-black">...plus simplement</p>
-					<h2 class="title has-text-black">Je crée des sites web fonctionnels <br> aux interfaces simples et agréables</h2>
-				</div>
-			</div>
-			
-			<div class="hero-body skew-text">
-				<div class="container">
-				</div>
-			</div>
-			
-			<div id="competences" class="hero-foot skew-text">
-				<div class="container">
-					<h2 class="title block has-text-black">Mes compétences</h2>
-					<div class="columns is-vcentered">
-						<div class="column has-text-centered">
-							<img class="px-3" src="img/html5.png" alt="HTML5">
-							<p class="content is-medium has-text-black">HTML5</p>
-						</div>
-						<div class="column has-text-centered">	
-							<img class="px-3" src="img/css3.png" alt="CSS3">
-							<p class="content is-medium has-text-black">CSS3</p>
-						</div>
-						<div class="column has-text-centered">	
-							<img class="px-3" src="img/javascript.png" alt="Javascript">
-							<p class="content is-medium has-text-black">Javascript</p>
-						</div>
-						<div class="column has-text-centered">	
-							<img class="px-3" src="img/bulma.png" alt="Bulma CSS">
-							<p class="content is-medium has-text-black">Bulma CSS</p>
-						</div>
-						<div class="column has-text-centered">	
-							<img class="px-3" src="img/vuejs.png" alt="VueJS">
-							<p class="content is-medium has-text-black">VueJS</p>
-						</div>
-						<div class="column has-text-centered">	
-							<img class="px-3" src="img/php.png" alt="PHP">
-							<p class="content is-medium has-text-black">PHP</p>
-						</div>						
-						<div class="column has-text-centered">
-							<img class="px-3" src="img/wordpress.png" alt="WordPress">
-							<p class="content is-medium has-text-black">WordPress</p>
-						</div>
-						<div class="column has-text-centered">
-							<img class="px-3" src="img/adobexd.png" alt="Adobe XD">
-							<p class="content is-medium has-text-black">Adobe XD</p>
-						</div>	
-					</div>	
-				</div>
-			</div>
-		</section>
-		
-		<section class="block">
-			<div id="realisations" class="container py-6">
-			<h2 class="title block">Quelques unes de mes réalisations</h2>
-			<div class="tile is-ancestor">
-				<div class="tile is-6 is-vertical is-parent">
-					<div class="tile is-child box">
-						<img src="img/erudyx-shot.jpg" alt="Erudyx.com">
-						<p class="subtitle"><a href="https://erudyx.com" target="_blank">erudyx.com</a></p>
-					</div>
-					<div class="tile is-child box">
-						<img  src="img/qotribe-shot.jpg" alt="Qotribe">
-						<p class="subtitle"><a href="https://qotribe.com" target="_blank">qotribe.com</a></p>
-					</div>
-				</div>
-				<div class="tile is-vertical is-parent">
-					<div class="tile is-child box">
-						<img src="img/heaven-shot.png" alt="Heaven">
-						<p class="subtitle"><a href="https://vivreheaven.org" target="_blank">vivreheaven.org</a></p>
-					</div>
-					<div class="tile is-child box">
-						<img  src="img/keran-shot.jpg" alt="Esquisse parc national de la Keran">
-						<p class="subtitle">Esquisse Parc National de la Kéran</p>
-					</div>
-				</div>
-			</div>
-			</div>
-		</section>
-		
-		<section class="block">
-			<div id="contact" class="container">
-				<h2 class="title block">Contact</h2>
-				<div class="column is-one-quarter box">
-					<h3 class="title is-4"><span class="decoration-primary">Email</span></h3>
-					<p class="content is-medium">gsotongbe@gmail.com</p>
-					<h3 class="title is-4"><span class="decoration-second">Github</span></h3>
-					<p class="content is-medium">github.com/digino</p>
-					<h3 class="title is-4">Adresse</h3>
-					<p class="content is-medium">05 rue de l'église, Adidogomé-Apédokoè, Lomé-Togo</p>
-				</div>
-			</div>
-		</section>
-	
-	</main>
+
+<header class="section">
+<div class="container flex">
+  <a href="index.html" class="logo">
+    <img src="img/logo.png">
+  </a>
+<nav class="navbar">
+  <ul class="row">
+    <li class="navlink"><a href="#competences">Compétences</a></li>
+    <li class="navlink"><a href="#portfolio">Portfolio</a></li>
+    <li class="navlink"><a href="#contact">Contact</a></li>
+    <li class="navlink"><a href="https://github.com/digino" target="_blank" title="Di Gino sur Github"><svg class="github" width="30" height="28" viewBox="0 0 30 28" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.9883 1.23535C7.74316 1.23242 1.875 7.09766 1.875 14.3369C1.875 20.0615 5.5459 24.9277 10.6582 26.7148C11.3467 26.8877 11.2412 26.3984 11.2412 26.0645V23.7939C7.26563 24.2598 7.10449 21.6289 6.83789 21.1895C6.29883 20.2695 5.02441 20.0352 5.40527 19.5957C6.31055 19.1299 7.2334 19.7129 8.30273 21.292C9.07617 22.4375 10.585 22.2441 11.3496 22.0537C11.5166 21.3652 11.874 20.75 12.3662 20.2725C8.24707 19.5342 6.53027 17.0205 6.53027 14.0322C6.53027 12.582 7.00781 11.249 7.94531 10.1738C7.34766 8.40137 8.00098 6.88379 8.08887 6.6582C9.79102 6.50586 11.5605 7.87696 11.6982 7.98535C12.665 7.72461 13.7695 7.58692 15.0059 7.58692C16.248 7.58692 17.3555 7.73047 18.3311 7.99414C18.6621 7.74219 20.3027 6.56445 21.8848 6.70801C21.9697 6.9336 22.6084 8.41602 22.0459 10.165C22.9951 11.2432 23.4785 12.5879 23.4785 14.041C23.4785 17.0352 21.75 19.5518 17.6191 20.2783C17.973 20.6263 18.2539 21.0413 18.4455 21.499C18.6372 21.9567 18.7357 22.4481 18.7354 22.9443V26.2402C18.7588 26.5039 18.7354 26.7647 19.1748 26.7647C24.3633 25.0156 28.0986 20.1143 28.0986 14.3398C28.0986 7.09766 22.2275 1.23535 14.9883 1.23535V1.23535Z" fill="#9a9a9a"></path></svg>
+    </a></li>
+  </ul>
+</nav>
+</div>
+</header>
+
+<main class="container">
+
+  <section class="section flex">
+  <div>
+    <h1 class>Salut, moi c'est Gino SOTONGBE.</h1>
+    <h2><span class="decoration">Développeur Frontend junior</span> </br>
+        <span class="decoration">et Designer UI</span></h2>
+  </div>
+  <div>
+      <img src="img/logo2x.png" class="rotate">
+  </div>
+  </section>
+    <section id="en-bref" class="section">
+  <h2><span class="decoration">En bref:</span></h2>
+  <p class="presentation"><strong></strong> Après 3 années d'études supérieures en informatique et deux diplômes décrochés en 2017, je me suis lancé dans le monde du travail.
+Attiré par le Web et les belles interfaces, c'est naturellement que je me suis tourné vers le développement et le design. J'ai dès lors pu travailler en agence web sur des projets de petite et moyenne envergure.
+Je suis actuellement en quête de nouveaux défis pour acquérir de nouvelles expériences.</p>
+  </section>
+
+  <section id="competences" class="section">
+    <h2><span class="decoration">Mes compétences</span></h2>
+      <p>Elles ne sont pas nombreuses certes, mais je n'ai de cesse d'apprendre* et d'en acquérir chaque jour.</p>
+    <div class="row">
+      <div class="line">
+        <p class="en-gras">- HTML et CSS</p>
+        <p class="en-gras">- Javascript</p>
+      </div>
+      <div class="line">
+        <p class="en-gras">- PHP</p>
+        <p class="en-gras">- WordPress</p>
+      </div>
+      <div class="line">
+        <p class="en-gras">- Adobe XD</p>
+      </div>
+    </div>
+    <p class="ps">*En train d'apprendre actuellement le <strong>Javascript avancé</strong> et le framework <strong>VueJS</strong>.</p>
+  </section>
+
+  <section id="portfolio" class="section">
+    <h2><span class="decoration">Mon Portfolio</span></h2>
+    <p>Voici certains des projets ou maquettes que j'ai réalisé.</p>
+    <div class="row">
+      <div class="projet">
+          <img class="apercu" src="img/erudyx-shot.jpg">
+          <h4><a href="https://erudyx.com" class="link-button" title="Visiter erudyx.com" target="_blank">Erudyx</a></h4>
+          <p>Plateforme web destinée au partage de la culture générale</p>
+          <span class="tool-tip">i
+            <span class="tool-tip-text">Utilisation du CMS WordPress et création d'un thème from scratch avec du
+            HTML, du CSS, du Javascript(JQuery) et du PHP(fonctions Wordpress.)</span>
+          </span>
+      </div>
+      <div class="projet">
+          <img class="apercu" src="img/heaven-shot.jpg">
+          <h4><a href="https://vivreheaven.org" class="link-button" title="Visiter vivreheaven.com" target="_blank">Heaven</a></h4>
+          <p>Site web conçu pour l'association Heaven qui oeuvre pour l'atteinte de l'ODD1</p>
+          <span class="tool-tip">i
+            <span class="tool-tip-text">Design et Conception faite avec du HTML, du CSS et du Javascript</span>
+          </span>
+      </div>
+      <div class="projet">
+          <img class="apercu" src="img/keran-shot.jpg">
+          <h4>Visit Kéran <a class="link-button open_modal">Voir</a></h4>
+          <p>Design fictif pour le site web du parc national de la Kéran</p>
+      </div>
+      <div class="modal">
+        <img src="img/keran-shot.jpg">
+        <span class="close">X</span>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact" class="section">
+    <h2><span class="decoration">Contact</span></h2>
+    <p>N'hésitez surtout pas à me contacter.</p>
+    <div class="row">
+      <div class="line">
+        <h3>Email</h3>
+        <p><a href="mailto:gsotongbe@gmail.com" class="link-button" title="Contacter Gino par Email">gsotongbe@gmail.com</a></p>
+      </div>
+      <div class="line">
+        <h3>Github</h3>
+        <p>@digino</p>
+      </div>
+      <div class="line">
+        <h3>👋 Eyi zandé loo !*</h3>
+        <p class="ps">*Recevez mes salutations depuis Lomé (Togo)</p>
+      </div>
+  </section>
+
+</main>
 
   <script src="js/main.js"></script>
-  
+
 </body>
 
 </html>
-
-
-
-
-
-
-
