--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ Je suis actuellement en quête de nouveaux défis pour acquérir de nouvelles ex
     <div class="row">
       <div class="projet">
           <img class="apercu" src="img/erudyx-shot.jpg">
-          <h4><a href="https://erudyx.com" class="link-button" title="Visiter erudyx.com" target="_blank">Erudyx</a></h4>
-          <p>Plateforme web destinée au partage de la culture générale</p>
+          <h4><a href="https://erudyx.com" class="link-button" title="Visiter erudyx.com" target="_blank">Visiter Erudyx</a></h4>
+          <p><strong>erudyx.com</strong> est une plateforme web destinée au partage de la culture générale</p>
           <span class="tool-tip">i
             <span class="tool-tip-text">Utilisation du CMS WordPress et création d'un thème from scratch avec du
             HTML, du CSS, du Javascript(JQuery) et du PHP(fonctions Wordpress.)</span>
@@ -94,21 +94,40 @@ Je suis actuellement en quête de nouveaux défis pour acquérir de nouvelles ex
       </div>
       <div class="projet">
           <img class="apercu" src="img/heaven-shot.jpg">
-          <h4><a href="https://vivreheaven.org" class="link-button" title="Visiter vivreheaven.com" target="_blank">Heaven</a></h4>
-          <p>Site web conçu pour l'association Heaven qui oeuvre pour l'atteinte de l'ODD1</p>
+          <h4><a href="https://vivreheaven.org" class="link-button" title="Visiter vivreheaven.com" target="_blank">Visiter le site</a></h4>
+          <p><strong>vivreheaven.org</strong> est le site web de l'association Heaven. Cette dernière oeuvre pour l'atteinte de l'ODD1</p>
           <span class="tool-tip">i
             <span class="tool-tip-text">Design et Conception faite avec du HTML, du CSS et du Javascript</span>
           </span>
       </div>
-      <div class="projet">
+      <div class="projet design">
           <img class="apercu" src="img/keran-shot.jpg">
-          <h4>Visit Kéran <a class="link-button open_modal">Voir</a></h4>
-          <p>Design fictif pour le site web du parc national de la Kéran</p>
+          <h4>Maquette Visit Kéran</h4>
+          <p>Design fictif du site web du parc national de la Kéran</p>
+          <div class="modal">
+            <img src="img/keran-shot.jpg">
+            <span class="close">X</span>
+          </div>
       </div>
-      <div class="modal">
-        <img src="img/keran-shot.jpg">
-        <span class="close">X</span>
+      <div class="projet design">
+          <img class="apercu" src="img/odg-redesign.jpg">
+          <h4>Maquette ODG</h4>
+          <p>Maquette proposée pour la refonte du site web de ODG (Optique à Dieu la Gloire) </p>
+          <div class="modal">
+            <img src="img/odg-redesign.jpg">
+            <span class="close">X</span>
+          </div>
       </div>
+      <div class="projet design">
+          <img class="apercu" src="img/bb-lome-redesign.jpg">
+          <h4>Maquette BB Lomé</h4>
+          <p>Maquette proposée pour la refonte du site web de la BB Lomé</p>
+          <div class="modal">
+            <img src="img/bb-lome-redesign.jpg">
+            <span class="close">X</span>
+          </div>
+      </div>
+
     </div>
   </section>
 
@@ -128,6 +147,7 @@ Je suis actuellement en quête de nouveaux défis pour acquérir de nouvelles ex
         <h3>👋 Eyi zandé loo !*</h3>
         <p class="ps">*Recevez mes salutations depuis Lomé (Togo)</p>
       </div>
+    </div>
   </section>
 
 </main>
