Corrections de quelques erreurs

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
   </section>
     <section id="en-bref" class="section">
   <h2><span class="decoration">En bref:</span></h2>
-  <p class="presentation"><strong></strong> Après 3 années d'études supérieures en informatique et deux diplômes décrochés en 2017, je me suis lancé dans le monde du travail.
-Attiré par le Web et les belles interfaces, c'est naturellement que je me suis tourné vers le développement et le design. J'ai dès lors pu travailler en agence web sur des projets de petite et moyenne envergure.
+  <p class="presentation"><strong></strong>
+Attiré par le Web et les belles interfaces, c'est naturellement que je me suis tourné vers le développement et le design après 3 années d'études supérieures en informatique et deux diplômes décrochés en 2017. J'ai dès lors pu travailler sur des projets de petite et moyenne envergure.
 Je suis actuellement en quête de nouveaux défis pour acquérir de nouvelles expériences.</p>
   </section>
 
@@ -76,34 +76,34 @@ Je suis actuellement en quête de nouveaux défis pour acquérir de nouvelles ex
         <p class="en-gras">- Adobe XD</p>
       </div>
     </div>
-    <p class="ps">*En train d'apprendre actuellement le <strong>Javascript avancé</strong> et le framework <strong>VueJS</strong>.</p>
+    <p class="ps">*En train d'apprendre actuellement le <strong>Javascript avancé</strong>, le framework <strong>VueJS</strong> et les principes <strong>avancés</strong> du Design.</p>
   </section>
 
   <section id="portfolio" class="section">
     <h2><span class="decoration">Mon Portfolio</span></h2>
-    <p>Voici certains des projets ou maquettes que j'ai réalisé.</p>
+    <p>Voici certains des projets que j'ai réalisé jusqu'alors</p>
     <div class="row">
       <div class="projet">
           <img class="apercu" src="img/erudyx-shot.jpg">
-          <h4><a href="https://erudyx.com" class="link-button" title="Visiter erudyx.com" target="_blank">Visiter Erudyx</a></h4>
+          <h4><a href="https://erudyx.com" class="link-button" title="Visiter erudyx" target="_blank">Visiter erudyx</a></h4>
           <p><strong>erudyx.com</strong> est une plateforme web destinée au partage de la culture générale</p>
           <span class="tool-tip">i
-            <span class="tool-tip-text">Utilisation du CMS WordPress et création d'un thème from scratch avec du
-            HTML, du CSS, du Javascript(JQuery) et du PHP(fonctions Wordpress.)</span>
+            <span class="tool-tip-text">Design et intégration faite avec du
+              HTML, du CSS, du Javascript(JQuery) et du PHP (fonctions Wordpress.)</span>
           </span>
       </div>
       <div class="projet">
           <img class="apercu" src="img/heaven-shot.jpg">
-          <h4><a href="https://vivreheaven.org" class="link-button" title="Visiter vivreheaven.com" target="_blank">Visiter le site</a></h4>
+          <h4><a href="https://vivreheaven.org" class="link-button" title="Visiter vivreheaven.com" target="_blank">Visiter Heaven</a></h4>
           <p><strong>vivreheaven.org</strong> est le site web de l'association Heaven. Cette dernière oeuvre pour l'atteinte de l'ODD1</p>
           <span class="tool-tip">i
-            <span class="tool-tip-text">Design et Conception faite avec du HTML, du CSS et du Javascript</span>
+            <span class="tool-tip-text">Design et intégration faite avec du HTML, du CSS et du Javascript</span>
           </span>
       </div>
       <div class="projet design">
           <img class="apercu" src="img/keran-shot.jpg">
           <h4>Maquette Visit Kéran</h4>
-          <p>Design fictif du site web du parc national de la Kéran</p>
+          <p>Design fictif d'un site web pour le parc national de la Kéran</p>
           <div class="modal">
             <img src="img/keran-shot.jpg">
             <span class="close">X</span>
@@ -112,7 +112,7 @@ Je suis actuellement en quête de nouveaux défis pour acquérir de nouvelles ex
       <div class="projet design">
           <img class="apercu" src="img/odg-redesign.jpg">
           <h4>Maquette ODG</h4>
-          <p>Maquette proposée pour la refonte du site web de ODG (Optique à Dieu la Gloire) </p>
+          <p>Maquette proposée pour la refonte du site web d'Optique à Dieu la Gloire ( <b>odg.tg</b> )</p>
           <div class="modal">
             <img src="img/odg-redesign.jpg">
             <span class="close">X</span>
@@ -121,7 +121,7 @@ Je suis actuellement en quête de nouveaux défis pour acquérir de nouvelles ex
       <div class="projet design">
           <img class="apercu" src="img/bb-lome-redesign.jpg">
           <h4>Maquette BB Lomé</h4>
-          <p>Maquette proposée pour la refonte du site web de la BB Lomé</p>
+          <p>Maquette proposée pour la refonte du site web de la BB Lomé ( <b>bblome.com</b> )</p>
           <div class="modal">
             <img src="img/bb-lome-redesign.jpg">
             <span class="close">X</span>
