New Competence Added

--- a/index.html
+++ b/index.html
@@ -44,44 +44,47 @@
 <main class="container">
 
   <section class="section flex">
-  <div>
-    <h1 class>Salut, moi c'est Gino SOTONGBE.</h1>
-    <h2><span class="decoration">Développeur Frontend junior</span> </br>
-        <span class="decoration">et Designer UI</span></h2>
+  <div class="who">
+    <h1>Salut, moi c'est Gino SOTONGBE</h1>
+    <p>Je suis un Développeur Frontend<br>
+        et Designer UI junior résidant à Lomé</p>
   </div>
-  <div>
-      <img src="img/logo2x.png" class="rotate">
+  <div class="image_div">
+      <span class="dec1"></span>
+      <span class="dec2"></span>
+      <img src="img/logo2x.png" class="image">
   </div>
   </section>
     <section id="en-bref" class="section">
-  <h2><span class="decoration">En bref:</span></h2>
-  <p class="presentation"><strong></strong>
-Attiré par le Web et les belles interfaces, c'est naturellement que je me suis tourné vers le développement et le design après 3 années d'études supérieures en informatique et deux diplômes décrochés en 2017. J'ai dès lors pu travailler sur des projets de petite et moyenne envergure.
-Je suis actuellement en quête de nouveaux défis pour acquérir de nouvelles expériences.</p>
+  <h2><span class="decoration">#</span>En bref</h2>
+  <p class="presentation">
+Attiré par le Web et les belles interfaces, c'est naturellement que je me suis tourné vers le développement et le design, après 3 années d'études supérieures en informatique et deux diplômes décrochés en 2017. J'ai dès lors pu travailler sur des projets de petite et moyenne envergure.
+Je suis actuellement en quête de nouveaux défis et de nouvelles expériences.</p>
   </section>
 
   <section id="competences" class="section">
-    <h2><span class="decoration">Mes compétences</span></h2>
+    <h2><span class="decoration">#</span>Mes compétences</h2>
       <p>Elles ne sont pas nombreuses certes, mais je n'ai de cesse d'apprendre* et d'en acquérir chaque jour.</p>
     <div class="row">
       <div class="line">
         <p class="en-gras">- HTML et CSS</p>
-        <p class="en-gras">- Javascript</p>
+        <p class="en-gras">- Javascript ES6</p>
+        <p class="en-gras">- VueJS</p>
       </div>
       <div class="line">
         <p class="en-gras">- PHP</p>
         <p class="en-gras">- WordPress</p>
       </div>
       <div class="line">
-        <p class="en-gras">- Adobe XD</p>
+        <p class="en-gras">- Design (Adobe XD)</p>
       </div>
     </div>
-    <p class="ps">*En train d'apprendre actuellement le <strong>Javascript avancé</strong>, le framework <strong>VueJS</strong> et les principes <strong>avancés</strong> du Design.</p>
+    <p class="ps">*En train d'apprendre actuellement le <strong>Javascript avancé</strong>, les éléments de l'écosystème du framework <strong>VueJS</strong> et les principes <strong>avancés du Design.</strong></p>
   </section>
 
   <section id="portfolio" class="section">
-    <h2><span class="decoration">Mon Portfolio</span></h2>
-    <p>Voici certains des projets que j'ai réalisé jusqu'alors</p>
+    <h2><span class="decoration">#</span>Mon Portfolio</h2>
+    <p>Voici quelques uns des projets que j'ai réalisé</p>
     <div class="row">
       <div class="projet">
           <img class="apercu" src="img/erudyx-shot.jpg">
@@ -102,8 +105,8 @@ Je suis actuellement en quête de nouveaux défis pour acquérir de nouvelles ex
       </div>
       <div class="projet design">
           <img class="apercu" src="img/keran-shot.jpg">
-          <h4>Maquette Visit Kéran</h4>
-          <p>Design fictif d'un site web pour le parc national de la Kéran</p>
+          <h4>Kéran</h4>
+          <p>Maquette fictive d'un site web pour le parc national de la Kéran</p>
           <div class="modal">
             <img src="img/keran-shot.jpg">
             <span class="close">X</span>
@@ -111,7 +114,7 @@ Je suis actuellement en quête de nouveaux défis pour acquérir de nouvelles ex
       </div>
       <div class="projet design">
           <img class="apercu" src="img/odg-redesign.jpg">
-          <h4>Maquette ODG</h4>
+          <h4>ODG Redesign</h4>
           <p>Maquette proposée pour la refonte du site web d'Optique à Dieu la Gloire ( <b>odg.tg</b> )</p>
           <div class="modal">
             <img src="img/odg-redesign.jpg">
@@ -120,7 +123,7 @@ Je suis actuellement en quête de nouveaux défis pour acquérir de nouvelles ex
       </div>
       <div class="projet design">
           <img class="apercu" src="img/bb-lome-redesign.jpg">
-          <h4>Maquette BB Lomé</h4>
+          <h4>BB Lomé</h4>
           <p>Maquette proposée pour la refonte du site web de la BB Lomé ( <b>bblome.com</b> )</p>
           <div class="modal">
             <img src="img/bb-lome-redesign.jpg">
@@ -132,8 +135,8 @@ Je suis actuellement en quête de nouveaux défis pour acquérir de nouvelles ex
   </section>
 
   <section id="contact" class="section">
-    <h2><span class="decoration">Contact</span></h2>
-    <p>N'hésitez surtout pas à me contacter.</p>
+    <h2><span class="decoration">#</span>Contact</h2>
+    <p>N'hésitez surtout pas à me contacter pour tout projet ou collaboration, je me ferais une grande joie de vous répondre.</p>
     <div class="row">
       <div class="line">
         <h3>Email</h3>
