--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <section class="section flex">
   <div class="who">
     <h1>Salut, moi c'est Gino SOTONGBE</h1>
-    <p>Je suis un Développeur Frontend<br>
+    <p>Je suis un Développeur Front-end<br>
         et Designer UI junior résidant à Lomé</p>
   </div>
   <div class="image_div">
@@ -76,7 +76,7 @@ Je suis actuellement en quête de nouveaux défis et de nouvelles expériences.<
         <p class="en-gras">- WordPress</p>
       </div>
       <div class="line">
-        <p class="en-gras">- Design (Adobe XD)</p>
+        <p class="en-gras">- UI Design (Adobe XD)</p>
       </div>
     </div>
     <p class="ps">*En train d'apprendre actuellement le <strong>Javascript avancé</strong>, les éléments de l'écosystème du framework <strong>VueJS</strong> et les principes <strong>avancés du Design.</strong></p>
@@ -88,20 +88,20 @@ Je suis actuellement en quête de nouveaux défis et de nouvelles expériences.<
     <div class="row">
       <div class="projet">
           <img class="apercu" src="img/erudyx-shot.jpg">
-          <h4><a href="https://erudyx.com" class="link-button" title="Visiter erudyx" target="_blank">Visiter erudyx</a></h4>
           <p><strong>erudyx.com</strong> est une plateforme web destinée au partage de la culture générale</p>
           <span class="tool-tip">i
             <span class="tool-tip-text">Design et intégration faite avec du
               HTML, du CSS, du Javascript(JQuery) et du PHP (fonctions Wordpress.)</span>
           </span>
+          <a href="https://erudyx.com" class="link-button" title="Visiter erudyx" target="_blank">Visiter erudyx</a>
       </div>
       <div class="projet">
           <img class="apercu" src="img/heaven-shot.jpg">
-          <h4><a href="https://vivreheaven.org" class="link-button" title="Visiter vivreheaven.com" target="_blank">Visiter Heaven</a></h4>
           <p><strong>vivreheaven.org</strong> est le site web de l'association Heaven. Cette dernière oeuvre pour l'atteinte de l'ODD1</p>
           <span class="tool-tip">i
             <span class="tool-tip-text">Design et intégration faite avec du HTML, du CSS et du Javascript</span>
           </span>
+          <a href="https://vivreheaven.org" class="link-button" title="Visiter vivreheaven.com" target="_blank">Visiter Heaven</a>
       </div>
       <div class="projet design">
           <img class="apercu" src="img/keran-shot.jpg">
@@ -127,6 +127,15 @@ Je suis actuellement en quête de nouveaux défis et de nouvelles expériences.<
           <p>Maquette proposée pour la refonte du site web de la BB Lomé ( <b>bblome.com</b> )</p>
           <div class="modal">
             <img src="img/bb-lome-redesign.jpg">
+            <span class="close">X</span>
+          </div>
+      </div>
+      <div class="projet design">
+          <img class="apercu" src="img/lapev-mobilier-redesign.jpg">
+          <h4>Lapev Mobilier redesign</h4>
+          <p>Design proposée pour la refonte du site ( <b>lapev-mobilier.com</b> )</p>
+          <div class="modal">
+            <img src="img/lapev-mobilier-redesign.jpg">
             <span class="close">X</span>
           </div>
       </div>
