--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ Je suis actuellement en quête de nouveaux défis et de nouvelles expériences.<
       <div class="line">
         <p class="en-gras">- PHP</p>
         <p class="en-gras">- WordPress</p>
+        <p class="en-gras">- Git</p>
       </div>
       <div class="line">
         <p class="en-gras">- UI Design (Adobe XD)</p>
