Last project added
I add  my second major sideproject

--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@ Je suis actuellement en quête de nouveaux défis et de nouvelles expériences.<
     <p>Voici quelques uns des projets que j'ai réalisé</p>
     <div class="row">
       <div class="projet">
+          <img class="apercu" src="img/ozofr-shot.png">
+          <p><strong>ozofr.com</strong> est une plateforme web permettant aux entrepreneurs de trouver rapidement les appels d'offres et aux chercheurs d'emplois de trouver et postuler rapidement aux offres d'emploi.</p>
+          <span class="tool-tip">i
+            <span class="tool-tip-text">Frontend réalisé avec du HTML, du CSS, du Javascript(VueJS) et backend conçu avec du PHP couplé au CMS Wordpress pour l'administration.</span>
+          </span>
+          <a href="https://ozofr.com" class="link-button" title="Visiter ozofr" target="_blank">Visiter ozofr</a>
+      </div>
+      <div class="projet">
           <img class="apercu" src="img/erudyx-shot.jpg">
           <p><strong>erudyx.com</strong> est une plateforme web destinée au partage de la culture générale</p>
           <span class="tool-tip">i
@@ -119,15 +127,6 @@ Je suis actuellement en quête de nouveaux défis et de nouvelles expériences.<
           <p>Maquette proposée pour la refonte du site web d'Optique à Dieu la Gloire ( <b>odg.tg</b> )</p>
           <div class="modal">
             <img src="img/odg-redesign.jpg">
-            <span class="close">X</span>
-          </div>
-      </div>
-      <div class="projet design">
-          <img class="apercu" src="img/bb-lome-redesign.jpg">
-          <h4>BB Lomé</h4>
-          <p>Maquette proposée pour la refonte du site web de la BB Lomé ( <b>bblome.com</b> )</p>
-          <div class="modal">
-            <img src="img/bb-lome-redesign.jpg">
             <span class="close">X</span>
           </div>
       </div>
