--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Je suis actuellement en quête de nouveaux défis et de nouvelles expériences.<
     <div class="row">
       <div class="projet">
           <img class="apercu" src="img/ozofr-shot.png">
-          <p><strong>ozofr.com</strong> est une plateforme web permettant aux entrepreneurs de trouver rapidement les appels d'offres et aux chercheurs d'emplois de trouver et postuler rapidement aux offres d'emploi.</p>
+          <p><strong>ozofr.com</strong> est une plateforme web permettant aux entrepreneurs de trouver rapidement les appels d'offres et rassemblant les offres d'emploi de différents sites.</p>
           <span class="tool-tip">i
             <span class="tool-tip-text">Frontend réalisé avec du HTML, du CSS, du Javascript(VueJS) et backend conçu avec du PHP couplé au CMS Wordpress pour l'administration.</span>
           </span>
