--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <section class="section flex">
   <div class="who">
     <h1>Salut, moi c'est Gino SOTONGBE</h1>
-    <p>Je suis un Développeur Front-end<br>
+    <p>Je suis un Développeur Web<br>
         et Designer UI junior résidant à Lomé</p>
   </div>
   <div class="image_div">
@@ -58,7 +58,7 @@
     <section id="en-bref" class="section">
   <h2><span class="decoration">#</span>En bref</h2>
   <p class="presentation">
-Attiré par le Web et les belles interfaces, c'est naturellement que je me suis tourné vers le développement et le design, après 3 années d'études supérieures en informatique et deux diplômes décrochés en 2017. J'ai dès lors pu travailler sur des projets de petite et moyenne envergure.
+Attiré par le Web et les belles interfaces, c'est naturellement que je me suis tourné vers le développement et le design, après 3 années d'études supérieures en informatique et deux diplômes décrochés en 2017. J'ai dès lors pu travailler sur des projets de différentes envergures.
 Je suis actuellement en quête de nouveaux défis et de nouvelles expériences.</p>
   </section>
 
@@ -89,9 +89,9 @@ Je suis actuellement en quête de nouveaux défis et de nouvelles expériences.<
     <div class="row">
       <div class="projet">
           <img class="apercu" src="img/ozofr-shot.png">
-          <p><strong>ozofr.com</strong> est une plateforme web permettant aux entrepreneurs de trouver rapidement les appels d'offres et rassemblant les offres d'emploi de différents sites.</p>
+          <p><strong>ozofr.com</strong> est une plateforme web permettant aux entrepreneurs de trouver rapidement les appels d'offres en Afrique de l'Ouest.</p>
           <span class="tool-tip">i
-            <span class="tool-tip-text">Frontend réalisé avec du HTML, du CSS, du Javascript(VueJS) et backend conçu avec du PHP couplé au CMS Wordpress pour l'administration.</span>
+            <span class="tool-tip-text">Frontend réalisé avec du HTML, du CSS, du Javascript(VueJS) et backend conçu avec du PHP couplé au CMS WordPress pour l'administration.</span>
           </span>
           <a href="https://ozofr.com" class="link-button" title="Visiter ozofr" target="_blank">Visiter ozofr</a>
       </div>
